--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
     "react-dom": "preact-compat"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "parcel-bundler": "^1.7.1",
+    "parcel-bundler": "^1.10.3",
     "parcel-plugin-bundle-visualiser": "^1.1.2"
   },
   "keywords": []
